crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations

import enum

from sqlalchemy import Enum, Integer
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class EventSeverity(str, enum.Enum):
    INFO_LEVEL = "info-level"
    WARNING_LEVEL = "warning_level"
    E_R_R_O_R__L_E_V_E_L = "ERROR_LEVEL"
    1CRITICAL = "1critical"

class Events(DeclarativeBase):
    __tablename__ = "events"

    id: Mapped[int] = mapped_column(Integer, nullable=False)
    severity: Mapped[EventSeverity] = mapped_column(Enum(EventSeverity), nullable=False)
