crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

import enum

from sqlmodel import Field, SQLModel


class EventSeverity(str, enum.Enum):
    INFO_LEVEL = "info-level"
    WARNING_LEVEL = "warning_level"
    ERROR_LEVEL = "ERROR_LEVEL"
    _1CRITICAL = "1critical"

class Events(SQLModel, table=True):
    __tablename__ = "events"

    id: int = Field(...)
    severity: EventSeverity = Field(...)
