crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_with_default_snapshot@enum_with_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class TaskStatus(models.TextChoices):
    PENDING = "pending"
    IN_PROGRESS = "in_progress"
    COMPLETED = "completed"

class Tasks(models.Model):
    id = models.IntegerField()
    status = models.CharField(max_length=11, choices=TaskStatus.choices, default="pending")
    priority = models.IntegerField(default=0)
    is_archived = models.BooleanField(default=False)

    class Meta:
        managed = False
        db_table = "tasks"
