crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_with_default_snapshot@enum_with_default_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 126
expression: rendered
---
export const tasksTaskStatus = pgEnum("tasks_task_status", ["pending", "in_progress", "completed"]);

export const tasks = pgTable("tasks", {
  id: integer("id").notNull(),
  status: tasksTaskStatus("status").notNull().default("pending"),
  priority: integer("priority").notNull().default(0),
  isArchived: boolean("is_archived").notNull().default(false),
});
