crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_with_default_snapshot@enum_with_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum TaskStatus {
  PENDING @map("pending")
  IN_PROGRESS @map("in_progress")
  COMPLETED @map("completed")
}

model Tasks {
  id Int
  status TaskStatus @default(PENDING)
  priority Int @default(0)
  is_archived Boolean @default(false)

  @@map("tasks")
}
