crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class BoolDefaults(models.Model):
    id = models.IntegerField(primary_key=True)
    is_deleted = models.BooleanField(default=False)

    class Meta:
        managed = False
        db_table = "bool_defaults"
